--- a/Q-User/src/main/resources/application.yml
+++ b/Q-User/src/main/resources/application.yml
@@ -1,6 +1,16 @@
 spring:
   application:
     name: Q-User
+  datasource:
+    url: jdbc:mysql://localhost:3306/jweb?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
+    password: root
+    username: root
+  jpa:
+    database: mysql
+    show-sql: true
+    hibernate:
+      naming:
+        physical-strategy: org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 server:
   port: 9083
 eureka:
