--- a/Q-Goods/src/main/resources/application.yml
+++ b/Q-Goods/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: Q-Goods
   datasource:
-    url: jdbc:mysql://localhost:3306/jweb?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
-    password: root
-    username: root
+    url: jdbc:mysql://192.168.3.18:3306/jweb?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
+    password: mysqlhxf123456
+    username: mysqlhxf
   jpa:
     database: mysql
     show-sql: true
@@ -16,4 +16,4 @@ server:
 eureka:
   client:
     service-url:
-      defaultZone: http://192.168.3.18:9080/eureka
+      defaultZone: http://192.168.3.148:9080/eureka
