--- a/Q-User/src/main/resources/application.yml
+++ b/Q-User/src/main/resources/application.yml
@@ -2,9 +2,9 @@ spring:
   application:
     name: Q-User
   datasource:
-    url: jdbc:mysql://localhost:3306/jweb?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
-    password: root
-    username: root
+    url: jdbc:mysql://192.168.3.18:3306/jweb?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&autoReconnect=true&serverTimezone=Asia/Shanghai
+    password: mysqlhxf123456
+    username: mysqlhxf
   jpa:
     database: mysql
     show-sql: true
