--- a/Q-Main-Gateway/src/main/resources/application.yml
+++ b/Q-Main-Gateway/src/main/resources/application.yml
@@ -9,6 +9,6 @@ eureka:
       defaultZone: http://192.168.3.18:9080/eureka
 zuul:
   routes:
-    deal:
+    rest:
       path: /deal/**
       serviceId: Q-REST
